# tide

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  build.sh
.zenflow/tasks/new-task-1309/: investigation.md  plan.md
.zenflow/tasks/new-task-53b9/: plan.md  requirements.md  spec.md
logs/: large-console-log.txt
memory/: 2025-12-29-19-56-34-floem-ui-fixes.jsonl
openspec/: project.md
openspec/changes/add-file-manager-features/: design.md  proposal.md  tasks.md
openspec/changes/add-syntax-highlighting/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-01-07-add-workspace-persistence-and-control-center/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-01-08-fix-chinese-input/: proposal.md  tasks.md
openspec/changes/fix-chinese-input/: proposal.md
openspec/changes/fix-chinese-input-focus/: proposal.md  tasks.md
openspec/specs/control-center/: spec.md
openspec/specs/launcher/: spec.md
openspec/specs/terminal-input/: spec.md
openspec/specs/terminal-pane-title/: spec.md
openspec/specs/workspace-persistence/: spec.md
resources/: Info.plist
src/: app.rs  logging.rs  main.rs  model.rs  theme.rs
src/components/: atoms.rs  icons.rs  layout.rs  mod.rs  panels.rs  terminal.rs
src/components/terminal/: colors.rs  constants.rs  mod.rs  panel.rs
src/services/: clipboard.rs  config.rs  fs.rs  git.rs  launcher.rs  mod.rs  state.rs  terminal.rs
swap_memory/: story_1228_sidebar-fix-v2.md  story_1228_sidebar-fix-v3.md  story_1228_sidebar-fix.md  task_1228_sidebar-blank-area.md  tech_spec_window_resize.md
(+16 files in other folders)
