[package]
name = "tide"
version = "0.1.0"
edition = "2021"

[dependencies]
floem = { git = "https://github.com/lapce/floem", rev = "e0dd862564e3afbad5cba8ebe60df166a7a41e56" }

[target.'cfg(target_os = "macos")'.dependencies]
alacritty_terminal = "0.25.1"
portable-pty = "0.9.0"
arboard = "3"
dispatch = "0.2"
