[package]
name = "tide"
version = "0.1.0"
edition = "2021"

[dependencies]
dirs = "6.0.0"
floem = { git = "https://github.com/lapce/floem", rev = "e0dd862564e3afbad5cba8ebe60df166a7a41e56", features = ["editor"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[target.'cfg(target_os = "macos")'.dependencies]
alacritty_terminal = "0.25.1"
portable-pty = "0.9.0"
arboard = "3"
dispatch = "0.2"
rfd = "0.15"
